# smart-sld

./: .env.example  .gitignore  ENTERPRISE_IMPACT.md  FEATURES.md  IMPACT.md  JUDGES_BRIEFING.md  LLAVA_FIRST_SUMMARY.md  METHODOLOGY.md  README.md  README_new.md  SETUP.md  demo_runner.py  preflight_check.py  pyproject.toml  requirements.txt  test_extraction.py  test_model.py
data/: audit.db
data/real/: batch_results_20260416_202007.json  der_orchestration_report.json  fault_predictions.json  katra_output.json  resilience_contingency_report.json  scada_audit_trail.json  security_audit_report.json
data/samples/: sample_sld_output.json
data/synthetic/: sld_000_gt.json  sld_001_gt.json  sld_002_gt.json  sld_003_gt.json  sld_004_gt.json  sld_005_gt.json  sld_006_gt.json  sld_007_gt.json  sld_008_gt.json  sld_009_gt.json  sld_010_gt.json  sld_011_gt.json  sld_012_gt.json  sld_013_gt.json  sld_014_gt.json  sld_015_gt.json  sld_016_gt.json  sld_017_gt.json  sld_018_gt.json  sld_019_gt.json  sld_020_gt.json  sld_021_gt.json  sld_022_gt.json  sld_023_gt.json  (+26 more)
hitl_frontend/: index-pro.html  index.html  sld_os.html
scripts/: add_confidence.py  anomaly_detector.py  batch_process.py  compare_models.py  der_coordinator.py  extract.py  extract_llava.py  fault_predictor.py  generate_synthetic.py  generate_training_data.py  quick_train.py  resilience_analyzer.py  scada_command_center.py  security_auditor.py  train_yolo.py  visualize.py  visualize_interactive.py
src/: __init__.py  cli.py  pipeline.py
synthetic_generator/: generator.py
tests/: test_pipeline.py
(+328 files in other folders)
